# zsharp

./: .gitignore  .importlinter  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  justfile  lint.py  mypy.ini  pyproject.toml  requirements.txt  run_experiments.py  setup.cfg  zsharp_demo.ipynb
.github/workflows/: ci.yml
configs/: baseline_sgd.yaml  cifar100.yaml  default.yaml  temp_percentile_50.yaml  test_sgd.yaml  vit_zsharp.yaml  zsharp_quick.yaml
docs/: README.md  algorithm.md  api.md
scripts/: README.md  experiment.py  train.py
src/: __init__.py  constants.py  data.py  eval.py  experiments.py  models.py  optimizer.py  train.py  utils.py
tests/: __init__.py  conftest.py  test_data.py  test_eval.py  test_experiments.py  test_models.py  test_optimizer.py  test_optimizer_properties.py  test_train.py  test_utils.py
