[project]
name = "zsharp"
version = "0.1.0"
description = "Sharpness-Aware Minimization with Z-Score Gradient Filtering"
authors = [
    {name = "Bangyen Pham", email = "bangyen99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "interrogate",
    "pre-commit",
    "types-PyYAML",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[interrogate]
fail-under = 100
ignore-init-method = false
ignore-init-module = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-regex = ["^_"]
exclude = ["venv", ".git", "__pycache__", ".pytest_cache", "tests", "scripts"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mps: marks tests that require MPS support",
]
filterwarnings = [
    "ignore::DeprecationWarning:torch.*",
    "ignore::PendingDeprecationWarning:torch.*",
    "ignore::DeprecationWarning:numpy.*",
    "ignore::PendingDeprecationWarning:numpy.*",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Maximum strictness: select all rules
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "E501",    # line too long (handled by ruff format)
    "COM812",  # missing-trailing-comma (formatter conflict)
    "ISC001",  # single-line-implicit-string-concatenation (formatter conflict)
    "PLW2901", # Loop variable overwrites (common in ML code)
    "N812",    # Lowercase imported as non-lowercase (allow common aliases)
    "C901",    # Function too complex
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = [
    "PLR2004",  # Magic numbers acceptable in tests
    "S101",     # Assert statements are acceptable in tests
    "S311",     # Standard random generators are acceptable in tests
]
"scripts/**/*.py" = [
    "BLE001",   # Blind exception catching is acceptable in scripts
]

# Type checking configuration
[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # Relaxed for torch decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_subclassing_any = false  # Relaxed for torch optimizers
disallow_untyped_calls = true
disallow_any_explicit = false
disallow_any_unimported = false
no_implicit_reexport = true
strict_optional = true

# Exclude test files from strict type checking
exclude = ["tests/", "scripts/"]

# Add type annotations gradually to improve code quality
# Priority order:
# 1. Public APIs (functions in __init__.py)
# 2. Core algorithms (optimizer.py)
# 3. Data processing (data.py)
# 4. Model definitions (models.py)
# 5. Training loops (train.py)

# Example type annotations to add:
# - Function parameters and return types
# - Class attributes
# - Generic types for collections
# - Union types for optional parameters
