[project]
name = "zsharp"
version = "0.1.0"
description = "Sharpness-Aware Minimization with Z-Score Gradient Filtering"
authors = [
    {name = "Bangyen Pham", email = "bangyen99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "pyyaml",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "interrogate",
    "pre-commit",
    "types-PyYAML",
    "mutmut",
    "import-linter",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[interrogate]
fail-under = 100
ignore-init-method = false
ignore-init-module = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-regex = ["^_"]
exclude = ["venv", ".git", "__pycache__", ".pytest_cache", "tests", "scripts"]

[tool.pytest.ini_options]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mps: marks tests that require MPS support",
]
filterwarnings = [
    "ignore::DeprecationWarning:torch.*",
    "ignore::PendingDeprecationWarning:torch.*",
    "ignore::DeprecationWarning:numpy.*",
    "ignore::PendingDeprecationWarning:numpy.*",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 79
indent-width = 4

# Assumption: Python 3.9
target-version = "py312"

[tool.ruff.lint]
# Maximum strictness: select all rules
select = ["ALL"]
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "E501",    # line too long (handled by ruff format)
    "COM812",  # missing-trailing-comma (formatter conflict)
    "ISC001",  # single-line-implicit-string-concatenation (formatter conflict)
    "PLW2901", # Loop variable overwrites (common in ML code)
    "N812",    # Lowercase imported as non-lowercase (allow common aliases)
    # We remove manually allowed complexity ignores
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 4

[tool.ruff.lint.pylint]
max-branches = 6
max-statements = 20

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = [
    "PLR2004",  # Magic numbers acceptable in tests
    "S",        # Relax security rules for tests
    "ANN",      # No type annotations required for tests
    "D",        # No docstrings required for tests
    "PLC",      # Relax complexity/import rules for tests
    "PLR",      # Relax refactoring rules for tests
    "ARG",      # Relax unused argument rules for tests (mocks)
    "FBT001",   # Boolean positional arguments okay in tests
    "SLF001",   # Accessing private members okay in tests
    "TRY",      # No strict try-except-finally in tests
    "EM",       # String literals in exceptions okay in tests
    "PTH",      # os.path is okay in tests
    "C901",     # Complexity checks not required for tests
    "G",        # Logging format okay in tests
    "SIM",      # Simplification rules okay in tests
    "I001",     # Import sorting (handled by ruff fmt)
    "NPY002",   # Legacy random allowed in tests
]
"scripts/**/*.py" = [
    "BLE001",   # Blind exception catching is acceptable in scripts
    "INP001",   # Implicit namespace package okay for scripts
    "PTH",      # os.path is okay in scripts
    "C901",     # Complexity checks not required for scripts
    "FBT",      # Boolean positional arguments okay in scripts
    "ERA",      # Commented-out code okay in scripts
    "EXE",      # Shebang usage okay in scripts
    "TRY",      # No strict try-except-finally in scripts
    "G",        # Logging format okay in scripts
    "ANN",      # No type annotations required for scripts
    "D",        # No docstrings required for scripts
    "PL",       # Relax refactoring rules for scripts
]

# Type checking configuration
[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/", "scripts/"]
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # Relaxed for torch decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
disallow_any_generics = true
disallow_untyped_calls = true
no_implicit_reexport = true
strict_optional = true

[[tool.mypy.overrides]]
module = "src.constants"
disallow_any_explicit = false



# Add type annotations gradually to improve code quality
# Priority order:
# 1. Public APIs (functions in __init__.py)
# 2. Core algorithms (optimizer.py)
# 3. Data processing (data.py)
# 4. Model definitions (models.py)
# 5. Training loops (train.py)

# Examples...
# ...
